#ifndef TRANSPORTCOMPANY_OBJECT_H
#define TRANSPORTCOMPANY_OBJECT_H


class Object {
protected:
    Object() {}
    virtual ~Object() = default;
};


#endif //TRANSPORTCOMPANY_OBJECT_H
