@startuml
'https://plantuml.com/class-diagram

enum TransportType {
Car,
Rail,
Avia
}

abstract class Object {
# Object()
}

Object <|-- Cargo
class Cargo {
- name : string
- weight : double

+ Cargo(name : string, weight : double)

+ getName() : string
+ getWeight() : double
}

Object <|-- Passenger
class Passenger {
- name : string

+ Passenger(name : string)

+ getName() : string
}


TransportType <--* Transport
Object <--o Transport
abstract class Transport {
- name : string
- type : TransportType
# objects : Object[]

# Transport(name : string, type : TransportType)

+ getName() : string

+ {abstract} addObject(object : Object) :  bool
+ getObjects() : Object[]
}

Transport <|-- CargoTransport
Cargo <--o CargoTransport
class CargoTransport {
- cargo_capacity : double
- cargo_total : double

+ CargoTransport(name : string, type : TransportType, cargo_capacity : double)

+ getCargoCapacity() : double
+ getCargoTotal() : double

+ addObject(object : Object) :  bool
}

Transport <|-- PassengerTransport
Passenger <--o PassengerTransport
class PassengerTransport {
- passenger_capacity : int
- passenger_total : int

+ PassengerTransport(name : string, type : TransportType, passenger_capacity : int)

+ getPassengerCapacity() : int
+ getPassengerTotal() : int

+ addObject(object : Object) :  bool
}

Transport <|-- UniversalTransport
Passenger <--o UniversalTransport
Cargo <--o UniversalTransport
class UniversalTransport {
- passenger_capacity : int
- passenger_total : int
- cargo_capacity : double
- cargo_total : double

+ UniversalTransport(name : string, type : TransportType, passenger_capacity : int, cargo_capacity : double)

+ getPassengerCapacity() : int
+ getPassengerTotal() : int
+ getCargoCapacity() : double
+ getCargoTotal() : double

+ addObject(object : Object) :  bool
}

Transport <--* Order
class Order {
- transport : Transport
- start : string
- finish : string

+ Order(transport : Transport, start : string, finish : string)

+ getTransport() : Transport
+ getStart() : string
+ getFinish() : string
}

Transport <--* OrderBuilder
Order <--o OrderBuilder
class OrderBuilder{
- transport : Transport
- start : string
- finish : string

+ OrderBuilder()

+ addTransport(transport : Transport) : void
+ addStart(start : string) : void
+ addFinish(finish : string) : void

+ Build() : Order
}

enum TransportVariety {
Cargo,
Passenger,
Universal
}


Transport <--o TransportBuilder
TransportType <--* TransportBuilder
TransportVariety <--* TransportBuilder
CargoTransport <-- TransportBuilder
PassengerTransport <-- TransportBuilder
UniversalTransport <-- TransportBuilder
class TransportBuilder {
- name : string
- type : TransportType
- variety : TransportVariety
- cargo_capacity : double
- passenger_capacity : int

+ TransportBuilder()

+ setName(name : string) : void
+ setType(type : TransportType) : void
+ setVariety(variety : TransportVariety) : void
+ setCargoCapacity(cargo_capacity : double) : void
+ setPassengerCapacity(passenger_capacity : int) : void

+ Build() : Transport
}

@enduml